2nd order low-pass filter module added
Help mode added to GUI
GUI updated

Pulse width is part of the wave form, not a separate parameter now
Using parameter VCOModulationVolume instead of VCOModulationFrequency

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,9 +10,10 @@ CPPFLAGS += -Wno-write-strings
 
 OBJS	= main.o kernel.o minisynth.o \
 	  pckeyboard.o \
-	  voice.o oscillator.o amplifier.o envelopegenerator.o \
+	  voice.o oscillator.o filter.o amplifier.o envelopegenerator.o \
 	  synthconfig.o patch.o parameter.o \
-	  mainwindow.o guiparameter.o
+	  mainwindow.o guiparameter.o \
+	  math.o
 
 LIBS	= $(CIRCLEHOME)/addon/ugui/libugui.a \
 	  $(CIRCLEHOME)/addon/Properties/libproperties.a \
