Use math functions from toolchain now
Should be faster than own implemented math functions
and allows AArch64 build.

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,8 +12,7 @@ OBJS	= main.o kernel.o minisynth.o \
 	  midikeyboard.o pckeyboard.o serialmididevice.o voicemanager.o \
 	  voice.o oscillator.o filter.o amplifier.o envelopegenerator.o \
 	  synthconfig.o patch.o parameter.o velocitycurve.o \
-	  mainwindow.o guiparameter.o \
-	  math.o math_expf.o
+	  mainwindow.o guiparameter.o
 
 LIBS	= $(CIRCLEHOME)/addon/ugui/libugui.a \
 	  $(CIRCLEHOME)/addon/Properties/libproperties.a \
