--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ CIRCLEHOME ?= ../circle
 
 CPPFLAGS += -Wno-write-strings
 
-OBJS	= main.o kernel.o minisynth.o \
+OBJS	= main.o kernel.o minisynth.o mididevice.o \
 	  midikeyboard.o pckeyboard.o serialmididevice.o voicemanager.o \
 	  voice.o oscillator.o filter.o amplifier.o envelopegenerator.o \
 	  synthconfig.o patch.o parameter.o velocitycurve.o \
