--- a/src/Makefile
+++ b/src/Makefile
@@ -6,15 +6,13 @@
 
 CIRCLEHOME ?= ../circle
 
-CPPFLAGS += -Wno-write-strings
-
 OBJS	= main.o kernel.o minisynth.o mididevice.o \
 	  midikeyboard.o pckeyboard.o serialmididevice.o voicemanager.o \
 	  voice.o oscillator.o mixer.o filter.o amplifier.o envelopegenerator.o \
 	  reverbmodule.o synthconfig.o patch.o parameter.o velocitycurve.o \
 	  mainwindow.o guiparameter.o
 
-LIBS	= $(CIRCLEHOME)/addon/ugui/libugui.a \
+LIBS	= $(CIRCLEHOME)/addon/lvgl/liblvgl.a \
 	  $(CIRCLEHOME)/addon/Properties/libproperties.a \
 	  $(CIRCLEHOME)/addon/fatfs/libfatfs.a \
 	  $(CIRCLEHOME)/addon/SDCard/libsdcard.a \
