Make MIDI CC mapping configurable
The MIDI CC mapping can be configured with the file midi-cc.txt on the
SD card now. The file format should be self explanatory. A default
config file is the config/ directory.

Issue #12

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ CIRCLEHOME ?= ../circle
 OBJS	= main.o kernel.o minisynth.o mididevice.o \
 	  midikeyboard.o pckeyboard.o serialmididevice.o voicemanager.o \
 	  voice.o oscillator.o mixer.o filter.o amplifier.o envelopegenerator.o \
-	  reverbmodule.o synthconfig.o patch.o parameter.o velocitycurve.o \
+	  reverbmodule.o synthconfig.o patch.o parameter.o velocitycurve.o midiccmap.o \
 	  mainwindow.o guiparameter.o guistringproperty.o
 
 LIBS	= $(CIRCLEHOME)/addon/lvgl/liblvgl.a \
